--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -53,8 +53,10 @@ jobs:
         with:
           file: Dockerfile.multistage
           target: run-test-stage
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to:   type=local,dest=/tmp/.buildx-cache
+          # cache-from: type=local,src=/tmp/.buildx-cache
+          # cache-to:   type=local,dest=/tmp/.buildx-cache
+          cache-from: type=gha
+          cache-to:   type=gha
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
